edited wiki pages

--- a/wiki/Intro.wiki
+++ b/wiki/Intro.wiki
@@ -6,10 +6,10 @@ minEASYOSD runs on the cheap MinimOSD hardware and realizes an OSD using a GPS.
 
 This project is GNU GPL v3 and using it is at your own risk.
 
-Example OSD:
+Example shopping link for OSD:
 http://www.goodluckbuy.com/on-screen-display-osd-board-minimosd-apm-telemetry-to-apm-1-and-apm-2.html
 
-Example GPS:
+Example shopping link for GPS:
 http://www.goodluckbuy.com/crius-cn-06-gps-receiver-v2-0-module.html
 
 ----
