edited wiki pages added jpg

--- a/wiki/Connect.wiki
+++ b/wiki/Connect.wiki
@@ -1,8 +1,15 @@
 = How to connect the OSD and GPS =
 
 
+Connect the GPS Tx with the MinimOSD Rx.
+
+Connect the GPS +5V with the MinimOSD +5V.
+
+Connect the GPS GND with the MinimOSD GND.
+
+Power both devices by connecting +5V/GND to a regulated power source e.g. a 5V BEC.
+
+
 Connection overview:
 
-Connection diagram will follow later.
-
-http://mineasyosd.googlecode.com/svn/wiki/images/001_connection.jpg
+http://mineasyosd.googlecode.com/svn/wiki/images/Connections.jpg
