edited wiki pages

--- a/wiki/Intro.wiki
+++ b/wiki/Intro.wiki
@@ -9,7 +9,14 @@ This project is GNU GPL v3 and using it is at your own risk.
 Example shopping link for OSD:
 http://www.goodluckbuy.com/on-screen-display-osd-board-minimosd-apm-telemetry-to-apm-1-and-apm-2.html
 
-Example shopping link for GPS:
+Example shopping links for GPS:
+
+The newer version but not tested by me, should work anyway:
+
+http://www.goodluckbuy.com/neo-6-v3-0-gps-neo-6m-module-for-apm-mwc-pirot-rabbit-flight-controller.html
+
+The older version tested by me:
+
 http://www.goodluckbuy.com/crius-cn-06-gps-receiver-v2-0-module.html
 
 ----
